--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,9 @@
-version: '3'
+version: '3.3'
 
 volumes:
   pg_data:
   static:
   media:
-
 
 services:
   db:
@@ -17,17 +16,20 @@ services:
     env_file: .env
     volumes:
       - static:/backend_static
-      - media:/media
+      - media:/media/
   frontend:
-    build: ./frontend/
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
     volumes:
-      - static:/frontend_static/
-    command: cp -r /app/build/. /frontend_static/
-  gateway:
-    build: ./nginx/
-    env_file: .env
-    volumes:
-      - static:/staticfiles/
-      - media:/media
+      - static:/frontend_static
+    command: cp -r /app/build/. /frontend_static
+  nginx:
+    image: nginx:1.19.3
     ports:
-      - 8000:80
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./docs/:/usr/share/nginx/html/api/docs/
+      - media:/media/
+      - static:/staticfiles/
