--- a/nginx.conf
+++ b/nginx.conf
@@ -4,12 +4,14 @@ server {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
-#    location /api/ {
-# 	proxy_pass http://127.0.0.1:8000/api/;
-# 	client_max_body_size 20M;
-#    }
+    location /api/ {
+	proxy_set_header Host $http_host;
+ 	proxy_pass http://backend:8000/api/;
+ 	client_max_body_size 20M;
+    }
     location /admin/ {
- 	proxy_pass http://127.0.0.1:8000/admin/;
+	proxy_set_header Host $http_host;
+ 	proxy_pass http://backend:8000/admin/;
   	client_max_body_size 20M;
     }
     location /media/ {
@@ -17,7 +19,7 @@ server {
   	client_max_body_size 20M;
     }
     location / {
-        root /usr/share/nginx/html;
+        alias /staticfiles/;
         index  index.html index.htm;
         try_files $uri /index.html;
         proxy_set_header        Host $host;
