--- a/backend/setup.cfg
+++ b/backend/setup.cfg
@@ -1,4 +1,6 @@
 [flake8]
+max-line-length = 79
+select = C,E,F,W,Q,DJ,DJ10
 # Не проверять код на соответствие стандартам W503 и F811
 ignore = 
     W503,
@@ -9,8 +11,11 @@ exclude =
     */migrations/,
     venv/,
     */venv/,
-    env/
+    env/,
     */env/,
 # Не проверять указанные файлы на соответствие определённым правилам:
 per-file-ignores =
-    */settings.py:E501
+    */settings.py:E501,
+    ./manage.py:Q000
+
+inline-quotes = "
