--- a/backend/.vscode/settings.json
+++ b/backend/.vscode/settings.json
@@ -10,4 +10,5 @@
         "editor.defaultFormatter": "ms-python.black-formatter"
     },
     "python.analysis.typeCheckingMode": "off",
+    "python.analysis.autoImportCompletions": false,
 }
