--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,37 +1,53 @@
 asgiref==3.7.2
+astroid==2.15.8
 black==23.9.1
 certifi==2023.7.22
 cffi==1.15.1
+cfgv==3.4.0
 charset-normalizer==3.2.0
 click==8.1.7
 coreapi==2.3.3
 coreschema==0.0.4
 cryptography==41.0.4
 defusedxml==0.7.1
+distlib==0.3.7
 Django==3.2.3
+django-admin-autocomplete-filter==0.7.1
 django-filter==23.3
 django-templated-mail==1.1.1
 djangorestframework==3.12.4
 djangorestframework-simplejwt==4.7.2
 djoser==2.1.0
+exceptiongroup==1.1.3
+filelock==3.13.1
 flake8==6.1.0
+flake8-django==1.4
+flake8-quotes==3.3.2
 gunicorn==20.1.0
+identify==2.5.31
 idna==3.4
+iniconfig==2.0.0
+isort==5.12.0
 itypes==1.2.0
 Jinja2==3.1.2
+lazy-object-proxy==1.9.0
 MarkupSafe==2.1.3
 mccabe==0.7.0
 mypy-extensions==1.0.0
+nodeenv==1.8.0
 oauthlib==3.2.2
 packaging==23.1
 pathspec==0.11.2
 Pillow==9.0.0
 platformdirs==3.10.0
+pluggy==1.3.0
+pre-commit==3.5.0
 psycopg2-binary==2.9.3
 pycodestyle==2.11.0
 pycparser==2.21
 pyflakes==3.1.0
 PyJWT==2.8.0
+pytest==7.4.3
 python3-openid==3.2.0
 pytz==2023.3.post1
 PyYAML==6.0
@@ -45,4 +61,6 @@ tomli==2.0.1
 typing_extensions==4.8.0
 uritemplate==4.1.1
 urllib3==2.0.5
+virtualenv==20.24.6
 webcolors==1.11.1
+wrapt==1.15.0
