--- a/nginx.conf
+++ b/nginx.conf
@@ -16,6 +16,7 @@ server {
     }
     location /media/ {
   	alias /media/;
+	proxy_set_header Host $http_host;
   	client_max_body_size 20M;
     }
     location / {
